--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@formspree/react": "^2.4.2",
     "@react-three/drei": "^9.74.6",
     "@react-three/fiber": "^8.13.0",
+    "dotenv": "^16.1.4",
     "framer-motion": "^10.12.16",
     "maath": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-router-dom": "^6.12.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
