--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.12.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
